Version bump for sbt